Change endpoints to match REST best practices [Delivers #183828475]
